--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "18.16.1"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "cors": "^2.8.5",
